--- a/OLD FILES/homePage.html
+++ b/OLD FILES/homePage.html
@@ -9,13 +9,13 @@
     <body>
         <div id=firstElement><h1>Welcome to Project HEPHAESTUS!</h1>
         <h2 id=floated>Where we break the limits of reality.</h2>
-            <a href="signUp.html" id=destiny><h1>EMBRACE YOUR DESTINY</h1></a>
+            <a href="/signup" id=destiny><h1>EMBRACE YOUR DESTINY</h1></a>
         </div>
        <br><br><br><br><br><br>
     <ul> 
-        <li class=buttonspacing><a href="about.html">About Project HEPHAESTUS</a></li>
-        <li class=buttonspacing><a href="faqs.html">Hephaestus Fundamental Knowledge</a></li>
-        <li class=buttonspacing><a href="records.html">Access the Record of Heroes.</a></li>
+        <li class=buttonspacing><a href="/about">About Project HEPHAESTUS</a></li>
+        <li class=buttonspacing><a href="/faqs">Hephaestus Fundamental Knowledge</a></li>
+        <li class=buttonspacing><a href="/records">Access the Record of Heroes.</a></li>
        
     </ul>
     </body>
